# metereolog

./: .gitignore  .rmq_enabled_plugins  CNAME  Makefile  README.md  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.yml
backend/: gunicorn.conf.py  initdb.sh  manage.py  metereolog-prod.dockerfile  metereolog.dockerfile  pyproject.toml
backend/device/: admin.py  models.py
backend/device/api/: serializers.py  urls.py  views.py
backend/device/migrations/: 0001_initial.py  0002_device_brand_device_model_device_serial_number.py
backend/iam/: admin.py  apps.py  models.py
backend/iam/api/: authentication.py  serializers.py  urls.py  views.py
backend/iam/migrations/: 0001_initial.py  0002_organization_user_organization.py  0003_permission.py  0004_role_user_roles.py  0005_organization_identifier.py
backend/message_hub/: apps.py  listener.py  services.py
backend/message_hub/management/commands/: run_message_hub.py
backend/metereolog/: asgi.py  base_views.py  urls.py  wsgi.py
backend/metereolog/fixtures/: initial_data.json  sensors_data.json
backend/metereolog/settings/: base.py  dev.py  production.py
backend/sensor/: admin.py  handlers.py  models.py
backend/sensor/api/: serializers.py  urls.py  views.py
backend/sensor/migrations/: 0001_initial.py  0002_create_hypertable_sensorreading.py  0002_sensorreading_sensor_identifier_and_more.py  0002_sensorreading_sensor_measuring_type.py  0003_auto_20250502_0631.py  0003_create_sensor_reading_hp.py  0004_sensor_device.py  0005_sensor_add_info.py  0006_alter_sensor_additional_info.py
deployment/: k8s.yaml  rabbitmq.yaml
docs/: conceptual_diagram.brM3  ddl_script.sql  logical_diagram.brM3  metereolog_db.odt
firmware/: .nvimrc  platformio.ini  test
frontend/: README.md  index.html  metereolog-ui-prod.dockerfile  metereolog-ui.dockerfile  package.json  quasar.config.js
(+117 files in other folders)
